ft_containers-unit-test/logs.txt
In file included from ../vector_tests/end().cpp:2:
In file included from ../vector_tests/__service.ipp:3:
../vector_tests/../../../Vector.hpp:284:3: error: 'friend' used outside of class
                friend bool     operator== (const reverse_iterator<Iterator>& lhs, const reverse_iterator<Iterator>& rhs)
                ^
../vector_tests/../../../Vector.hpp:290:3: error: 'friend' used outside of class
                friend bool     operator!= (const reverse_iterator<Iterator>& lhs, const reverse_iterator<Iterator>& rhs)
                ^
../vector_tests/../../../Vector.hpp:296:3: error: 'friend' used outside of class
                friend bool     operator<  (const reverse_iterator<Iterator>& lhs, const reverse_iterator<Iterator>& rhs)
                ^
../vector_tests/../../../Vector.hpp:302:3: error: 'friend' used outside of class
                friend bool     operator<= (const reverse_iterator<Iterator>& lhs, const reverse_iterator<Iterator>& rhs)
                ^
../vector_tests/../../../Vector.hpp:308:3: error: 'friend' used outside of class
                friend bool     operator>  (const reverse_iterator<Iterator>& lhs, const reverse_iterator<Iterator>& rhs)
                ^
../vector_tests/../../../Vector.hpp:314:3: error: 'friend' used outside of class
                friend bool     operator>= (const reverse_iterator<Iterator>& lhs, const reverse_iterator<Iterator>& rhs)
                ^
../vector_tests/../../../Vector.hpp:321:3: error: 'friend' used outside of class
                friend reverse_iterator<Iterator>       operator+ (
                ^
../vector_tests/../../../Vector.hpp:329:3: error: 'friend' used outside of class
                friend typename reverse_iterator<Iterator>::difference_type     operator- (
                ^
../vector_tests/../../../Vector.hpp:350:19: error: expected member name or ';' after declaration specifiers
                typedef iterator<const value_type>                      const_iterator;///////////////////////////////
                ~~~~~~~~~~~~~~~~^
../vector_tests/../../../Vector.hpp:352:27: error: expected member name or ';' after declaration specifiers
                typedef reverse_iterator<const_iterator>        const_reverse_iterator;
                ~~~~~~~~~~~~~~~~~~~~~~~~^
../vector_tests/../../../Vector.hpp:443:3: error: unknown type name 'const_iterator'
                const_iterator                  begin() const { return const_iterator(this->_begin); }
                ^
../vector_tests/../../../Vector.hpp:445:3: error: unknown type name 'const_iterator'
                const_iterator                  end() const { return const_iterator(this->_begin + this->_size); }
                ^
../vector_tests/../../../Vector.hpp:447:3: error: unknown type name 'const_reverse_iterator'; did you mean 'reverse_iterator'?
                const_reverse_iterator  rbegin() const { return const_reverse_iterator(end()); }
                ^~~~~~~~~~~~~~~~~~~~~~
                reverse_iterator
../vector_tests/../../../Vector.hpp:351:40: note: 'reverse_iterator' declared here
                typedef reverse_iterator<iterator>                      reverse_iterator;
                                                                        ^
../vector_tests/../../../Vector.hpp:449:3: error: unknown type name 'const_reverse_iterator'; did you mean 'reverse_iterator'?
                const_reverse_iterator  rend() const { return const_reverse_iterator(begin()); }
                ^~~~~~~~~~~~~~~~~~~~~~
                reverse_iterator
../vector_tests/../../../Vector.hpp:351:40: note: 'reverse_iterator' declared here
                typedef reverse_iterator<iterator>                      reverse_iterator;
                                                                        ^
../vector_tests/../../../Vector.hpp:697:4: error: 'friend' used outside of class
                        friend bool     operator== (const vector<T,Alloc>& lhs, const vector<T,Alloc>& rhs)
                        ^
../vector_tests/../../../Vector.hpp:705:4: error: 'friend' used outside of class
                        friend bool     operator!= (const vector<T,Alloc>& lhs, const vector<T,Alloc>& rhs)
                        ^
../vector_tests/../../../Vector.hpp:711:4: error: 'friend' used outside of class
                        friend bool     operator<  (const vector<T,Alloc>& lhs, const vector<T,Alloc>& rhs)
                        ^
../vector_tests/../../../Vector.hpp:717:4: error: 'friend' used outside of class
                        friend bool     operator<= (const vector<T,Alloc>& lhs, const vector<T,Alloc>& rhs)
                        ^
../vector_tests/../../../Vector.hpp:723:4: error: 'friend' used outside of class
                        friend bool     operator>  (const vector<T,Alloc>& lhs, const vector<T,Alloc>& rhs)
                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
.
.
rrors generated.
